--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -11,11 +11,15 @@
   gap: 40px;
 }
 
-.logo {
+.logo-sidebar {
   background-color: #e2e8fa5e;
   width: 100%;
   height: 6%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.logo-sidebar > img {
+  width: 200px;
+  position: relative;
 }
