view employees ui completed

--- a/src/components/SubHeader/Subheader.css
+++ b/src/components/SubHeader/Subheader.css
@@ -1,5 +1,5 @@
 .Subheader {
-  height: 8%;
+  height: 75px;
   box-shadow: 0px 3px 6px #00000029;
   width: calc(100% - 360px);
   margin-left: 315px;
