create/edit update

--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -4,25 +4,25 @@
   width: 50%;
   /* border: 1px solid red; */
 }
-input {
+.text-field > input {
   height: 45px;
   padding-left: 10px;
   border-radius: 5px;
   border: 2px solid #b4b7bd;
   background-color: transparent;
 }
-input:focus-visible {
-    border: 2px solid #1eb4f0;
-    outline: 2px;
-}
-
-input:focus,
-input:active {
+.text-field > input:focus-visible {
   border: 2px solid #1eb4f0;
   outline: 2px;
 }
 
-label {
+.text-field > input:focus,
+.text-field > input:active {
+  border: 2px solid #1eb4f0;
+  outline: 2px;
+}
+
+.text-field > label {
   font-size: 16px;
   font-weight: 600;
   color: #b4b7bd;
@@ -43,5 +43,5 @@ input:valid ~ label {
   color: #1eb4f0;
   font-size: 14px;
   font-weight: 400;
-  padding:  0 5px 0 5px;
+  padding: 0 5px 0 5px;
 }
