--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -23,3 +23,28 @@
   border-radius: 3px;
   opacity: 1;
 }
+
+.Button-secondary{
+  width: 50%;
+  height: 40px;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #03aeee;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #b0e6fa;
+  border-radius: 3px;
+  opacity: 1;
+}
+.Button-secondary:hover{
+  width: 50%;
+  height: 40px;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #03aeee;
+  background: #b5b8b9 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #b0e6fa;
+  border-radius: 3px;
+  opacity: 1;
+}
