--- a/src/pages/ECemp/ECEmp.css
+++ b/src/pages/ECemp/ECEmp.css
@@ -9,10 +9,8 @@ main {
 }
 .edit-create {
   height: auto;
-  box-shadow: 0px 3px 6px #00000029;
-  width: calc(80% - 360px);
-  margin-left: 315px;
-  margin-right: 15px;
+ 
+  width: 100%;
   background-color: #fdfdfd;
   border-radius: 5px;
   display: flex;
@@ -21,4 +19,20 @@ main {
   align-items: start;
   gap: 20px;
   justify-content: start;
+}
+
+.form-layout{
+  width: calc(80% - 360px);
+  margin-left: 315px;
+  margin-right: 15px;
+  margin-bottom: 15px;
+  box-shadow: 0px 3px 6px #00000029;
+  background-color: #fdfdfd;
+}
+
+.button-row{
+  width: 50%;
+  margin:15px;
+  display: flex;
+  gap:15px;
 }
