--- a/src/components/Create-input/CreateInput.css
+++ b/src/components/Create-input/CreateInput.css
@@ -4,8 +4,8 @@
   width: 300px;
   height: auto;
   gap: 10px;
-  align-items: start;
-  justify-content: start;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .input-parent > input {
