--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   height: 50px;
 }
