--- a/src/pages/ECemp/ECEmp.css
+++ b/src/pages/ECemp/ECEmp.css
@@ -1,27 +1,27 @@
 main {
-    width: 100%;
-    height: 99vh;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    gap: 20px;
-    background-color: #fafafa;
+  width: 100%;
+  height: 99vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  gap: 20px;
+  background-color: #fafafa;
 }
 .edit-create {
   height: auto;
- 
+
   width: 100%;
   background-color: #fdfdfd;
   border-radius: 5px;
   display: flex;
   flex-wrap: wrap;
   padding: 15px;
-  align-items: start;
+  align-items: flex-start;
   gap: 20px;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
-.form-layout{
+.form-layout {
   width: calc(80% - 360px);
   margin-left: 315px;
   margin-right: 15px;
@@ -30,9 +30,9 @@ main {
   background-color: #fdfdfd;
 }
 
-.button-row{
+.button-row {
   width: 50%;
-  margin:15px;
+  margin: 15px;
   display: flex;
-  gap:15px;
+  gap: 15px;
 }
