--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,10 @@
 .header {
-  height: 6%;
+  min-height: 60px;
+  height: 60px !important;
   /* box-shadow: 0px 3px 6px #00000029; */
   width: calc(100% - 300px);
   margin-left: 300px;
   background-color: white;
+  position: sticky;
+  top: 0;
 }
