--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -3,7 +3,7 @@
   height: 100%;
   box-shadow: 0px 3px 6px #00000029;
   background-color: white;
-  position: absolute;
+  position: fixed;
   top: 0;
   display: flex;
   flex-direction: column;
