--- a/src/pages/ECemp/ECEmp.css
+++ b/src/pages/ECemp/ECEmp.css
@@ -1,9 +1,8 @@
-main {
+.ecemp-main {
   width: 100%;
   height: 99vh;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   gap: 20px;
   background-color: #fafafa;
 }
