--- a/src/pages/empDeatils/Empdetails.css
+++ b/src/pages/empDeatils/Empdetails.css
@@ -1,24 +1,24 @@
-main {
+.detail-main {
   width: 100%;
   height: 99vh;
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   gap: 20px;
   background-color: #fafafa;
 }
 .emp-detail {
-  height: auto;
+  /* height: auto; */
   box-shadow: 0px 3px 6px #00000029;
   width: calc(80% - 360px);
   margin-left: 315px;
   margin-right: 15px;
-  background-color: #FDFDFD;
+  background-color: #fdfdfd;
   border-radius: 5px;
   display: flex;
   flex-wrap: wrap;
   padding: 15px;
   align-items: center;
-  
 }
 .detail {
   width: 150px;
