--- a/src/pages/employee/Employee.css
+++ b/src/pages/employee/Employee.css
@@ -1,8 +1,9 @@
-main {
+.employee-main {
   width: 100%;
   height: 99vh;
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   gap: 20px;
   background-color: #fafafa;
 }
@@ -18,6 +19,8 @@ main {
   padding: 0 15px;
   align-items: center;
 
+  position: sticky;
+  top: 155px;
   /* justify-content: space-evenly; */
 }
 .emp {
